--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -11,4 +12,14 @@ body {
 
 a {
   text-decoration: none;
+}
+
+select {
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  color: #444;
+  border: 2px solid #111;
+  border-radius: 4px;
+  background-color: white;
 }
